--- a/style aceuil.css
+++ b/style aceuil.css
@@ -54,6 +54,9 @@ margin-left:150px;
 margin-right:20px;
 width:250px;
 height:350px;
+border-style:solid;
+border-width:2px;
+border-color:#e8eaf6;
 }
 
 #bouton_menu2
@@ -63,7 +66,10 @@ height:350px;
 	margin-left:20px;
 	margin-right:20px;
 	width:250px;
-height:350px;
+    height:350px;
+    border-style:solid;
+    border-width:2px;
+    border-color:#e8eaf6;
 }
 
 #bouton_menu3
@@ -74,6 +80,9 @@ margin-left:150px;
 margin-right:20px;
 width:250px;
 height:350px;
+border-style:solid;
+border-width:2px;
+border-color:#e8eaf6;
 
 }
 
@@ -85,6 +94,9 @@ height:350px;
 	margin-right:20px;
 	width:250px;
     height:350px;
+	border-style:solid;
+    border-width:2px;
+    border-color:#e8eaf6;
 }
 
 #bouton_proche
