--- a/style aceuil.css
+++ b/style aceuil.css
@@ -44,16 +44,17 @@ padding-bottom:5px;
 #zone_boutton
 {
 	display:flex;
+	width:100%;
 }
 
 #bouton_menu1
 {
-margin-top:20px;
-margin-bottom:20px;
-margin-left:150px;
-margin-right:20px;
-width:250px;
-height:350px;
+margin-top:10%;
+margin-bottom:10%;
+margin-left:20%;
+margin-right:30%;
+width:55%;
+height:80%;
 border-style:solid;
 border-width:2px;
 border-color:#e8eaf6;
@@ -61,12 +62,12 @@ border-color:#e8eaf6;
 
 #bouton_menu2
 {
-	margin-top:20px;
-	margin-bottom:20px;
-	margin-left:20px;
-	margin-right:20px;
-	width:250px;
-    height:350px;
+	margin-top:10%;
+	margin-bottom:10%;
+	margin-left:20%;
+	margin-right:30%;
+	width:55%;
+    height:80%;
     border-style:solid;
     border-width:2px;
     border-color:#e8eaf6;
@@ -74,12 +75,12 @@ border-color:#e8eaf6;
 
 #bouton_menu3
 {
-margin-top:20px;
-margin-bottom:20px;
-margin-left:150px;
-margin-right:20px;
-width:250px;
-height:350px;
+margin-top:10%;
+margin-bottom:10%;
+margin-left:20%;
+margin-right:30%;
+width:55%;
+height:80%;
 border-style:solid;
 border-width:2px;
 border-color:#e8eaf6;
@@ -88,12 +89,12 @@ border-color:#e8eaf6;
 
 #bouton_menu4
 {
-	margin-top:20px;
-	margin-bottom:20px;
-	margin-left:20px;
-	margin-right:20px;
-	width:250px;
-    height:350px;
+	margin-top:10%;
+	margin-bottom:10%;
+	margin-left:20%;
+	margin-right:30%;
+	width:55%;
+    height:80%;
 	border-style:solid;
     border-width:2px;
     border-color:#e8eaf6;
@@ -103,12 +104,11 @@ border-color:#e8eaf6;
 {
 
 	border-radius:25%;
-	margin-left:35%;
-	margin-right:50%;
+	margin-left:38%;
 	margin-bottom:10px;
 	color:#FFC107;
 	background-color:#00838f;
-	width:250px;
+	width:20%;
 	font-size:20px;
 }
 
