--- a/css/style.css
+++ b/css/style.css
@@ -89,7 +89,8 @@ a
 
 #b_note
 {
-	background-color:#ffcdd2;
+
+	background-color:#FFDDD2;
 }
 
 #b_chic
@@ -114,7 +115,7 @@ a
 
 #bouton_proch
 {
-	heigth:10%;
+	height:10%;
 	width:10%;
 	background-color:#43a047;
 	text-align:center;
