--- a/css/palette.css
+++ b/css/palette.css
@@ -10,8 +10,8 @@ header
 
 h1
 {
-	color:#FFC107;
-	background-color:#00838f;
+	 color:#FFC107;
+	background-color:#43a047;
 	height:100%;
 	width:100%;
 	text-align:center;
@@ -21,11 +21,38 @@ h1
 	padding-bottom:20px;
 }
 
+h2
+{
+	font-weight: bold;
+	text-align:center;
+}
+
+
+
+h4::before
+{
+font-family:'Font Awesome 5 Pro';
+content:"\f7a4";
+margin-right:5%;
+}
+
+h4::after
+{
+	font-family:'Font Awesome 5 Pro';
+	content:"\f7a4";
+	margin-left:5%;
+}
+
+a
+{
+	text-decoration:none;
+	color:#FFC107;
+}
 
 
 footer
 {
-	background-color:#00838f;
+    background-color:#43a047;
 	width:100%;
 	display:flex;
 	flex-direction:row;
@@ -46,6 +73,16 @@ font-family:'Font Awesome 5 Pro';
 		font-weight: 900;
 }
 
+
+#zone_menu
+{
+	height:50%;
+	width:50%;
+	background-color:#fafafa;
+	text-align:center;
+	margin-left:25%;
+	margin-bottom:10px;
+}
 
 #ml
 {
@@ -72,4 +109,24 @@ margin-right:10px;
 	flex-direction:row;
 	width:100%;
 	
+}
+
+
+.platetprix
+{
+	display:flex;
+	flex-direction:row;
+	text-align:center;
+}
+
+.plat
+{
+	width:75%;
+	text-align:left;
+	margin-left:10%;
+}
+
+.prix
+{
+	width:25%;
 }
