--- a/css/note.css
+++ b/css/note.css
@@ -1,7 +1,18 @@
+@font-face
+{
+	font-family:'Selya';
+    src:url('../polices/Selya.ttf');
+	font-weight:normal;
+	font-style:normal;
+}
+
+
+
+
 body
 {
 	margin:0;
-	font-family:"New Century",cursive;
+	font-family:"New Century",italic;
 	font-style: italic;
 }
 
@@ -29,20 +40,32 @@ a
 	color:#FFC107;
 }
 
+i
+{
+	margin-top:10px;
+	margin-bottom:0;
+	font-size:50px;
+}
+
 h2
 {
 	font-weight: bold;
+	font-size:40px;
 	text-align:center;
+	font-family:'Selya';
 }
 
 h3
 {
-	
+	margin-top:0;
+	font-size:40px;
+	font-family:'Selya';
 }
 
 h4
 {
-	
+font-family:'Comic Sans MS';
+font-style:bold;
 }
 
 h4::before
@@ -61,7 +84,8 @@ h4::after
 
 h5
 {
-
+font-size:30px;
+font-family:'Selya';
 }
 
 h5::before
@@ -103,6 +127,8 @@ font-family:'Font Awesome 5 Pro';
 	background-color:#FFDDD2;
 	text-align:center;
 	margin-left:25%;
+	padding-bottom:10px;
+	margin-bottom:15px;
 }
 
 #ml
