--- a/css/chic.css
+++ b/css/chic.css
@@ -1,3 +1,11 @@
+@font-face
+{
+	font-family:'otfpoc';
+    src:url('../polices/otfpoc.otf');
+	font-weight:normal;
+	font-style:normal;
+}
+
 body
 {
 	margin:0;
@@ -23,17 +31,30 @@ h1
 
 h2
 {
+	font-family:'otfpoc';
 	font-weight: bold;
 	text-align:center;
 }
 
+h3
+{
+	font-family:'otfpoc';
+	font-size:30px;
+}
 
+h4
+{
+	font-family:'Comic Sans MS';
+    font-weight:normal;
+	
+}
 
 h4::before
 {
 font-family:'Font Awesome 5 Pro';
 content:"\f7a4";
 margin-right:5%;
+font-weight:bold;
 }
 
 h4::after
@@ -41,6 +62,7 @@ h4::after
 	font-family:'Font Awesome 5 Pro';
 	content:"\f7a4";
 	margin-left:5%;
+	font-weight:bold;
 }
 
 a
@@ -82,6 +104,8 @@ font-family:'Font Awesome 5 Pro';
 	text-align:center;
 	margin-left:25%;
     margin-bottom:10px;
+	padding-top:15px;
+	padding-bottom:15px;
 }
 
 #ml
