--- a/css/palette.css
+++ b/css/palette.css
@@ -1,3 +1,14 @@
+
+
+@font-face
+{
+	font-family:'Saithik';
+    src:url('../polices/Saithik.ttf');
+	font-weight:normal;
+	font-style:normal;
+}
+
+
 body
 {
 	margin:0;
@@ -23,17 +34,29 @@ h1
 
 h2
 {
+	font-family:'Saithik';
 	font-weight: bold;
 	text-align:center;
 }
 
+h3
+{
+	font-family:'Saithik';
+	font-size:50px;
+}
 
+h4
+{
+	font-family:'Comic Sans MS';
+    font-weight:normal;
+}
 
 h4::before
 {
 font-family:'Font Awesome 5 Pro';
 content:"\f7a4";
 margin-right:5%;
+font-weight:bold;
 }
 
 h4::after
@@ -41,6 +64,7 @@ h4::after
 	font-family:'Font Awesome 5 Pro';
 	content:"\f7a4";
 	margin-left:5%;
+	font-weight:bold;
 }
 
 a
@@ -82,6 +106,8 @@ font-family:'Font Awesome 5 Pro';
 	text-align:center;
 	margin-left:25%;
 	margin-bottom:10px;
+	padding-bottom:15px;
+	padding-top:15px;
 }
 
 #ml
@@ -129,4 +155,5 @@ margin-right:10px;
 .prix
 {
 	width:25%;
+	font-weight:bold;
 }
