--- a/css/chic.css
+++ b/css/chic.css
@@ -19,7 +19,7 @@ header
 h1
 {
 	 color:#FFC107;
-	background-color:#43a047;
+	background-color:#599b87;
 	height:100%;
 	width:100%;
 	text-align:center;
@@ -74,7 +74,7 @@ a
 
 footer
 {
-	background-color:#43a047;
+	background-color:#599b87;
 	width:100%;
 	display:flex;
 	flex-direction:row;
