--- a/css/mentions_legale.css
+++ b/css/mentions_legale.css
@@ -12,7 +12,7 @@ header
 h1
 {
 	 color:#FFC107;
-	background-color:#43a047;
+	background-color:#599b87;
 	height:100%;
 	width:100%;
 	text-align:center;
@@ -22,6 +22,12 @@ h1
 	padding-bottom:20px;
 }
 
+h2
+{
+
+		text-align:center;
+		font-family: 'arial'
+}
 
 a
 {
@@ -47,7 +53,7 @@ font-family:'Font Awesome 5 Pro';
 
 footer
 {
-    background-color:#43a047;
+    background-color:#599b87;
 	width:100%;
 	display:flex;
 	flex-direction:row;
