--- a/css/papille.css
+++ b/css/papille.css
@@ -20,7 +20,7 @@ header
 h1
 {
     color:#FFC107;
-	background-color:#43a047;
+	background-color:#599b87;
 	height:100%;
 	width:100%;
 	text-align:center;
@@ -73,7 +73,7 @@ a
 
 footer
 {
-	background-color:#43a047;
+	background-color:#599b87;
 	width:100%;
 	display:flex;
 	flex-direction:row;
