--- a/css/note.css
+++ b/css/note.css
@@ -12,8 +12,7 @@
 body
 {
 	margin:0;
-	font-family:"New Century",italic;
-	font-style: italic;
+	
 }
 
 header
@@ -50,10 +49,9 @@ i
 
 h2
 {
-	font-weight: bold;
 	font-size:40px;
 	text-align:center;
-	font-family:'Selya';
+
 }
 
 h3
@@ -134,22 +132,28 @@ font-family:'Font Awesome 5 Pro';
 
 #ml
 {
+	width:100%;
 	color:#FFC107;
-margin-bottom:20px;
-margin-top:20px;
+/*margin-bottom:20px;
+margin-top:20px;*/
 margin-left:10px;
-margin-right:39%;
+display:block;
+text-align:left;
+/*margin-right:39%;*/
 }
 
 
 #cn
 {
+	width:100%;
 	color:#FFC107;
-margin-bottom:20px;
-margin-top:20px;
-margin-left:39%;
+/*margin-bottom:20px;
+margin-top:20px;*/
+/*margin-left:39%;*/
 margin-right:10px;
+text-align:right;
 }
+
 
 .ligne
 {
