--- a/css/palette.css
+++ b/css/palette.css
@@ -34,8 +34,7 @@ h1
 
 h2
 {
-	font-family:'Saithik';
-	font-weight: bold;
+	
 	text-align:center;
 }
 
@@ -109,24 +108,28 @@ font-family:'Font Awesome 5 Pro';
 	padding-bottom:15px;
 	padding-top:15px;
 }
-
 #ml
 {
+	width:100%;
 	color:#FFC107;
-margin-bottom:20px;
-margin-top:20px;
+/*margin-bottom:20px;*/
+margin-top:10px;
 margin-left:10px;
-margin-right:39%;
+display:block;
+text-align:left;
+/*margin-right:39%;*/
 }
 
 
 #cn
 {
+	width:100%;
 	color:#FFC107;
-margin-bottom:20px;
-margin-top:20px;
-margin-left:39%;
+/*margin-bottom:20px;*/
+margin-top:10px;
+/*margin-left:39%;*/
 margin-right:10px;
+text-align:right;
 }
 
 .ligne
