--- a/css/style.css
+++ b/css/style.css
@@ -122,6 +122,12 @@ a
 	color:black;
 }
 
+a:hover
+{
+	transform:scale(1.15);
+	opacity:0.8;
+}
+
 #b_note
 {
     font-family:'police_note';
@@ -130,14 +136,16 @@ a
 	transform:scale(1);
 	transition-property:transform;
 	transition-duration:1000ms;
+	margin-right:30px;
+	margin-bottom:30px;
 }
-
+/*
 #b_note:hover
 {
 	transform:scale(1.15);
 	opacity:0.8;
 }
-
+*/
 
 #b_chic
 {
@@ -147,13 +155,16 @@ a
 	transform:scale(1);
 	transition-property:transform;
 	transition-duration:1000ms;
+	margin-left:30px;
+	margin-bottom:30px;
 }
-
+/*
 #b_chic:hover
 {
 transform:scale(1.15);	
 opacity:0.8;
 }
+*/
 
 #b_papille
 {
@@ -162,13 +173,16 @@ opacity:0.8;
 	transform:scale(1);
 	transition-property:transform;
 	transition-duration:1000ms;
+	margin-right:30px;
+	margin-top:30px;
 }
-
+/*
 #b_papille:hover
 {
 	transform:scale(1.15);
 	opacity:0.8;
 }
+*/
 
 #b_palette
 {
@@ -177,14 +191,16 @@ opacity:0.8;
 	transform:scale(1);
 	transition-property:transform;
 	transition-duration:1000ms;
+	margin-left:30px;
+	margin-top:30px;
 }
-
+/*
 #b_palette:hover
 {
 	transform:scale(1.15);
 	opacity:0.8;
 }
-
+*/
 #m_note
 {
 	margin-top:0;
@@ -297,14 +313,16 @@ border-color:#e8eaf6;
 	font-size:20px;
 }
 */
+
 #ml
 {
 	/*width:100%;*/
 	color:#FFC107;
-margin-bottom:20px;
-margin-top:20px;
+/*margin-bottom:20px;
+margin-top:20px;*/
 margin-left:10px;
 display:block;
+text-align:left;
 /*margin-right:39%;*/
 }
 
@@ -313,10 +331,11 @@ display:block;
 {
 	width:100%;
 	color:#FFC107;
-margin-bottom:20px;
-margin-top:20px;
+/*margin-bottom:20px;
+margin-top:20px;*/
 /*margin-left:39%;*/
 margin-right:10px;
+text-align:right;
 }
 
 
