--- a/css/note.css
+++ b/css/note.css
@@ -70,14 +70,14 @@ font-style:bold;
 h4::before
 {
 font-family:'Font Awesome 5 Pro';
-content:"\f7a4";
+content:"\f337";
 margin-right:5%;
 }
 
 h4::after
 {
 	font-family:'Font Awesome 5 Pro';
-	content:"\f7a4";
+	content:"\f337";
 	margin-left:5%;
 }
 
