--- a/css/papille.css
+++ b/css/papille.css
@@ -50,7 +50,7 @@ font-weight:normal;
 h4::before
 {
 font-family:'Font Awesome 5 Pro';
-content:"\f7a4";
+content:"\f337";
 margin-right:5%;
 font-weight:bold;
 }
@@ -58,7 +58,7 @@ font-weight:bold;
 h4::after
 {
 	font-family:'Font Awesome 5 Pro';
-	content:"\f7a4";
+	content:"\f337";
 	margin-left:5%;
 	font-weight:bold;
 }
