--- a/css/note.css
+++ b/css/note.css
@@ -61,10 +61,53 @@ h3
 	font-family:'Selya';
 }
 
+/*
+* {margin:0;padding:0;border:0 none;position: relative; outline: none;*/
+}
 h4
 {
 font-family:'Comic Sans MS';
 font-style:bold;
+margin:0;
+padding:0;
+border:0 none;
+position: relative;
+ outline: none;
+}
+*, *:after, *:before {
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+}
+
+
+h4 > a {
+  text-decoration: none;
+  color: black;
+  z-index: 1;
+  margin:0;
+  padding:0;
+  border:0 none;
+  position: relative;
+  outline: none;
+}
+
+h4 > a:before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 3px;
+  bottom: 0;
+  left: 0;
+  background: red;
+  visibility: hidden;
+  border-radius: 5px;
+  transform: scaleX(0);
+  transition: .25s linear;
+}
+h4 > a:hover:before,
+h4 > a:focus:before {
+  visibility: visible;
+  transform: scaleX(1);
 }
 
 h4::before
@@ -134,10 +177,9 @@ font-family:'Font Awesome 5 Pro';
 {
 	width:100%;
 	color:#FFC107;
-/*margin-bottom:20px;
-margin-top:20px;*/
+/*margin-bottom:20px;*/
+margin-top:10px;
 margin-left:10px;
-display:block;
 text-align:left;
 /*margin-right:39%;*/
 }
@@ -145,10 +187,10 @@ text-align:left;
 
 #cn
 {
-	width:100%;
+	width:90%;
 	color:#FFC107;
-/*margin-bottom:20px;
-margin-top:20px;*/
+/*margin-bottom:20px;*/
+margin-top:10px;
 /*margin-left:39%;*/
 margin-right:10px;
 text-align:right;
