--- a/css/palette.css
+++ b/css/palette.css
@@ -43,12 +43,52 @@ h3
 	font-family:'Saithik';
 	font-size:50px;
 }
-
 h4
 {
-	font-family:'Comic Sans MS';
-    font-weight:normal;
+font-family:'Comic Sans MS';
+font-style:bold;
+margin:0;
+padding:0;
+border:0 none;
+position: relative;
+ outline: none;
 }
+*, *:after, *:before {
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+}
+
+
+h4 > a {
+  text-decoration: none;
+  color: black;
+  z-index: 1;
+  margin:0;
+  padding:0;
+  border:0 none;
+  position: relative;
+  outline: none;
+}
+
+h4 > a:before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 3px;
+  bottom: 0;
+  left: 0;
+  background: orange;
+  visibility: hidden;
+  border-radius: 5px;
+  transform: scaleX(0);
+  transition: .25s linear;
+}
+h4 > a:hover:before,
+h4 > a:focus:before {
+  visibility: visible;
+  transform: scaleX(1);
+}
+
 
 h4::before
 {
