--- a/css/note.css
+++ b/css/note.css
@@ -187,10 +187,10 @@ text-align:left;
 
 #cn
 {
-	width:90%;
+	width:80%;
 	color:#FFC107;
 /*margin-bottom:20px;*/
-margin-top:10px;
+margin-top:15px;
 /*margin-left:39%;*/
 margin-right:10px;
 text-align:right;
@@ -223,4 +223,25 @@ text-align:right;
 {
 	width:25%;
 	font-weight:bold;
+}
+
+
+@media all and (max-width: 768px) /*mise en place du responsive*/
+{
+
+
+#zone_menu
+{
+	height:50%;
+	width:70%;
+	margin:auto;
+	margin-bottom:10px;
+}
+
+
+#cn
+{
+	width:60%;
+}
+
 }
