--- a/css/style.css
+++ b/css/style.css
@@ -128,6 +128,12 @@ a:hover
 	opacity:0.8;
 }
 
+#a_exept
+{
+	text-decoration:none;
+	color:#FFC107;
+}
+
 #b_note
 {
     font-family:'police_note';
@@ -212,8 +218,13 @@ opacity:0.8;
 	width:20%;
 	background-color:#43a047;
 	text-align:center;
-	margin-left:45%;
-	margin-bottom:5%;
+	/*margin-left:45%;
+	margin-bottom:5%;*/
+	margin:auto;
+	margin-bottom:10px;
+	padding-right:5px;
+	padding-top:2px;
+	padding-bottom:2px;
 	border-radius:5%;
 	font-size:20px;
 	display:flex;
@@ -222,7 +233,9 @@ opacity:0.8;
 
 #b_proch
 {
+	width:100%;
 	color:#FFC107;
+	margin:0;
 }
 
 h1 .m_note
@@ -347,6 +360,16 @@ transform:scale(1);
 	animation:headshake 400ms backwards infinite;
 }
 
+@keyframes headshake2
+{
+25%{
+	transform:translateX(0.5%);
+}	
+75%{
+	transform:translateX(-0.5%);
+}
+}
+
 #cn
 {
 	width:90%;
@@ -354,10 +377,17 @@ transform:scale(1);
 /*margin-bottom:20px;
 margin-top:20px;*/
 /*margin-left:39%;*/
-margin-right:10px;
+transform:scale(1);
+margin-right:20px;
 text-align:right;
 }
 
+
+#cn:hover
+{
+	transform:scale(1);
+	animation:headshake2 500ms backwards infinite;
+}
 
 .load
 {
@@ -365,6 +395,7 @@ text-align:right;
 	height:3vh;
 	display:flex;
 	justify-content:space-evenly;
+	margin:0;
 }
 .load_bar
 {
