--- a/css/papille.css
+++ b/css/papille.css
@@ -61,7 +61,7 @@ h4 > a {
   color: black;
   z-index: 1;
   margin:0;
-  padding:0;
+  padding-bottom:5px;
   border:0 none;
   position: relative;
   outline: none;
