--- a/css/style.css
+++ b/css/style.css
@@ -1,38 +1,3 @@
-@font-face
-{
-	font-family:'police_note';
-    src:url('../polices/Selya.ttf');
-	font-weight:normal;
-	font-style:normal;
-}
-
-@font-face
-{
-	font-family:'otfpoc';
-    src:url('../polices/otfpoc.otf');
-	font-weight:normal;
-	font-style:normal;
-}
-
-
-@font-face
-{
-	font-family:'sweethearts';
-    src:url('../polices/sweethearts.ttf');
-	font-weight:normal;
-	font-style:normal;
-}
-
-
-@font-face
-{
-	font-family:'Saithik';
-    src:url('../polices/Saithik.ttf');
-	font-weight:normal;
-	font-style:normal;
-}
-
-
 body
 {
 	margin:0;
@@ -56,25 +21,6 @@ h1
 	padding-bottom:20px;
 }
 
-h2
-{
-	text-align:center;
-	margin-top:45%;
-}
-
-h3
-{
-	text-align:center;
-}
-
-i
-{
-	margin-left:45%;
-	margin-top:40%;
-	color:red;
-	font-size:150%;
-}
-
 
 #recherche
 {
@@ -90,164 +36,6 @@ font-family:'Font Awesome 5 Pro';
 		font-weight: 900;
 }
 
-section
-{
-	display:grid;
-	grid-template-columns:repeat(2, 1fr);
-	/*margin-left:20%;
-	margin-right:20%;*/
-	margin:0 auto;
-	width:100%;
-}
-
-
-article
-{
-	height:380px;
-	width:50%;
-	margin: auto;
-	margin-top:5%;
-	margin-bottom:5%;
-	border:1px solid ;
-	border-color:#e8eaf6;
-	display:flex;
-	flex-direction:column;
-}
-
-a
-{
-	height:100%;
-	width:95%;
-	text-decoration:none;
-	color:black;
-}
-
-a:hover
-{
-	transform:scale(1.15);
-	opacity:0.5;
-}
-
-#a_exept
-{
-	text-decoration:none;
-	color:#FFC107;
-}
-
-#b_note
-{
-    font-family:'police_note';
-	font-size:25px;
-	background-color:#FFDDD2;
-	transform:scale(1);
-	transition-property:transform;
-	transition-duration:1000ms;
-	margin-right:30px;
-	margin-bottom:30px;
-}
-/*
-#b_note:hover
-{
-	transform:scale(1.15);
-	opacity:0.8;
-}
-*/
-
-#b_chic
-{
-	background-color:#ffebee;
-	font-family:'otfpoc';
-	font-size:15px;
-	transform:scale(1);
-	transition-property:transform;
-	transition-duration:1000ms;
-	margin-left:30px;
-	margin-bottom:30px;
-}
-/*
-#b_chic:hover
-{
-transform:scale(1.15);	
-opacity:0.8;
-}
-*/
-
-#b_papille
-{
-	font-family:'sweethearts';
-	background-color:#f9f9f9;
-	transform:scale(1);
-	transition-property:transform;
-	transition-duration:1000ms;
-	margin-right:30px;
-	margin-top:30px;
-}
-/*
-#b_papille:hover
-{
-	transform:scale(1.15);
-	opacity:0.8;
-}
-*/
-
-#b_palette
-{
-	font-family:'Saithik';
-	background-color:#fdfffd;
-	transform:scale(1);
-	transition-property:transform;
-	transition-duration:1000ms;
-	margin-left:30px;
-	margin-top:30px;
-}
-/*
-#b_palette:hover
-{
-	transform:scale(1.15);
-	opacity:0.8;
-}
-*/
-#m_note
-{
-	margin-top:0;
-}
-
-#bouton_proch
-{
-	height:10%;
-	width:20%;
-	background-color:#43a047;
-	text-align:center;
-	/*margin-left:45%;
-	margin-bottom:5%;*/
-	margin:auto;
-	margin-bottom:10px;
-	padding-right:5px;
-	padding-top:2px;
-	padding-bottom:2px;
-	border-radius:5%;
-	font-size:20px;
-	display:flex;
-	flex-direction:row;
-}
-
-#b_proch
-{
-	width:100%;
-	color:#FFC107;
-	margin:0;
-}
-
-h1 .m_note
-{
-	margin-top:5%;
-}
-
-h2 .m_note
-{
-	margin-top:5%;
-}
-
 footer
 {
 	background-color:#43a047;
@@ -255,6 +43,8 @@ footer
 	display:flex;
 	flex-direction:row;
 	justify-content:space-between;
+	bottom:0;
+	position:sticky;
 }
 
 /*
@@ -387,148 +177,4 @@ text-align:right;
 {
 	transform:scale(1);
 	animation:headshake2 500ms backwards infinite;
-}
-
-.load
-{
-	width:5vh;
-	height:3vh;
-	display:flex;
-	justify-content:space-evenly;
-	margin:0;
-}
-.load_bar
-{
-	background-color:#15DEA5;
-		height:100%;
-		width:0.5vh;
-		animation: bars 1000ms backwards infinite;
-		animation-direction:alternate;
-		@for $i from 1 through 5{
-			&--#{$i}{
-				animation-delay:200ms*$i;
-			}
-		}
-}
-
-.load_bar2
-{
-	    background-color:#15DEA5;
-		height:100%;
-		width:0.5vh;
-		animation: bars 975ms backwards infinite;
-		animation-direction:alternate;
-}
-
-.load_bar3
-{
-	    background-color:#15DEA5;
-		height:100%;
-		width:0.5vh;
-		animation: bars 950ms backwards infinite;
-		animation-direction:alternate;
-}
-
-.load_bar4
-{
-	    background-color:#15DEA5;
-		height:100%;
-		width:0.5vh;
-		animation: bars 925ms backwards infinite;
-		animation-direction:alternate;
-}
-
-.load_bar5
-{
-	    background-color:#15DEA5;
-		height:100%;
-		width:0.5vh;
-		animation: bars 900ms backwards infinite;
-		animation-direction:alternate;
-}
-
-@keyframes bars{
-0%{
-	transform:scaleY(0.5);
-	
-   }
-100%{
-	transform:scaleY(1.0);
-}
-   
-}
-
-
-
-
-@media all and (max-width: 768px) /*mise en place du responsive*/
-{
-	
-section
-{
-display:flex;
-flex-direction:column;	
-}
-
-
-#b_note
-{
-	/*
-	margin-right:30px;
-	margin-bottom:30px;
-	*/
-	margin:auto;
-	margin-top:10px;
-	margin-bottom:10px;
-}
-
-#b_chic
-{
-	/*
-	margin-left:30px;
-	margin-bottom:30px;
-	*/
-	margin:auto;
-	margin-top:10px;
-	margin-bottom:10px;
-}
-
-#b_papille
-{
-	/*
-	margin-right:30px;
-	margin-top:30px;
-	*/
-	margin:auto;
-	margin-top:10px;
-	margin-bottom:10px;
-}
-
-
-#b_palette
-{
-	/*
-	margin-left:30px;
-	margin-top:30px;
-	*/
-	margin:auto;
-	margin-top:10px;
-	margin-bottom:10px;
-}
-
-#bouton_proch
-{
-	height:10%;
-	width:40%;
-	margin:auto;
-	margin-bottom:10px;
-}
-
-#cn
-{
-	width:70%;
-}
-
-
-	
 }
