--- a/css/papille.css
+++ b/css/papille.css
@@ -72,7 +72,7 @@ h4 > a:focus:before {
 h4::before
 {
 font-family:'Font Awesome 5 Pro';
-content:"\f337";
+content:url(../img/papille_gauche.jpg);
 margin-right:5%;
 font-weight:bold;
 }
@@ -80,7 +80,7 @@ font-weight:bold;
 h4::after
 {
 	font-family:'Font Awesome 5 Pro';
-	content:"\f337";
+	content:url(../img/papille_droit.jpg);
 	margin-left:5%;
 	font-weight:bold;
 }
