--- a/css/note.css
+++ b/css/note.css
@@ -91,15 +91,13 @@ h4 > a:focus:before {
 
 h4::before
 {
-font-family:'Font Awesome 5 Pro';
-content:"\f337";
+content:url(../img/note_gauche.jpg);
 margin-right:5%;
 }
 
 h4::after
 {
-	font-family:'Font Awesome 5 Pro';
-	content:"\f337";
+	content:url(../img/note_droit.jpg);
 	margin-left:5%;
 }
 
