--- a/css/chic.css
+++ b/css/chic.css
@@ -155,6 +155,14 @@ margin-right:20px;
 @media all and (max-width: 768px) /*mise en place du responsive*/
 {
 
+h4:before{
+	content:none;
+}
+h4:after{
+	content:none;
+}
+
+
 
 #zone_menu
 {
