--- a/css/note.css
+++ b/css/note.css
@@ -157,7 +157,12 @@ h5::before
 
 @media all and (max-width: 768px) /*mise en place du responsive*/
 {
-
+h4:before{
+	content:none;
+}
+h4:after{
+	content:none;
+}
 
 #zone_menu
 {
