--- a/css/papille.css
+++ b/css/papille.css
@@ -21,12 +21,15 @@ h2
 h3
 {
 	font-family:'sweethearts';
+	color:blue;
+	font-size:25px;
 }
 h4
 {
 font-family:'Comic Sans MS';
 font-style:bold;
 margin:0;
+margin-top:20px;
 padding:0;
 border:0 none;
 position: relative;
@@ -135,6 +138,8 @@ margin-right:20px;
 	display:flex;
 	flex-direction:row;
 	text-align:center;
+	margin-bottom:0;
+	margin-top:5px;
 }
 
 .plat
@@ -142,11 +147,14 @@ margin-right:20px;
 	width:75%;
 	text-align:left;
 	margin-left:10%;
+	margin-top:5px;
 }
 
 .prix
 {
 	width:25%;
+	font-weight:bold;
+	margin-top:5px;
 }
 
 @media all and (max-width: 768px) /*mise en place du responsive*/
