--- a/css/chic.css
+++ b/css/chic.css
@@ -21,17 +21,32 @@ h3
 {
 	font-family:'otfpoc';
 	font-size:30px;
+	color:purple;
 }
 h4
 {
 font-family:'Comic Sans MS';
 font-style:bold;
 margin:0;
+margin-top:30px;
 padding:0;
 border:0 none;
 position: relative;
  outline: none;
 }
+
+.t1{
+	color:orange;
+}
+
+.t2{
+	color:purple;
+}
+
+.t3{
+	color:blue;
+}
+
 *, *:after, *:before {
   box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -145,11 +160,15 @@ margin-right:20px;
 	width:75%;
 	text-align:left;
 	margin-left:10%;
+	margin-bottom:0;
+	margin-top:15px;
 }
 
 .prix
 {
 	width:25%;
+	margin-bottom:0;
+	margin-top:15px;
 }
 
 @media all and (max-width: 768px) /*mise en place du responsive*/
