--- a/css/note.css
+++ b/css/note.css
@@ -23,6 +23,7 @@ i
 	margin-top:10px;
 	margin-bottom:0;
 	font-size:50px;
+	color:red;
 	/*background:linear-gradient(to right, red, orange);*/
 }
 
@@ -48,6 +49,7 @@ h4
 font-family:'Comic Sans MS';
 font-style:bold;
 margin:0;
+margin-top:20px;
 padding:0;
 border:0 none;
 position: relative;
@@ -113,6 +115,7 @@ h5::before
 		content: "\f001";
 		font-weight: 900;
 		margin-right:10px;
+		color:red;
 }
 
 #zone_menu
@@ -139,6 +142,7 @@ h5::before
 	display:flex;
 	flex-direction:row;
 	text-align:center;
+	
 }
 
 .plat
@@ -146,12 +150,16 @@ h5::before
 	width:75%;
 	text-align:left;
 	margin-left:10%;
+	margin-bottom:0;
+	margin-top:15px;
 }
 
 .prix
 {
 	width:25%;
 	font-weight:bold;
+	margin-bottom:0;
+	margin-top:10px;
 }
 
 
