--- a/css/palette.css
+++ b/css/palette.css
@@ -24,12 +24,14 @@ h3
 {
 	font-family:'Saithik';
 	font-size:50px;
+	color:green;
 }
 h4
 {
 font-family:'Comic Sans MS';
 font-style:bold;
 margin:0;
+margin-top:30px;
 padding:0;
 border:0 none;
 position: relative;
@@ -142,12 +144,16 @@ margin-right:20px;
 	width:75%;
 	text-align:left;
 	margin-left:10%;
+	margin-bottom:0;
+	margin-top:15px;
 }
 
 .prix
 {
 	width:25%;
 	font-weight:bold;
+	margin-bottom:0;
+	margin-top:15px;
 }
 
 
