--- a/css/papille.css
+++ b/css/papille.css
@@ -21,7 +21,10 @@ h2
 h3
 {
 	font-family:'sweethearts';
-	color:blue;
+	background-image: linear-gradient(to right, #2D18BB 0%, #33B5FF 100%);
+  color: transparent;
+  -webkit-background-clip: text;
+  background-clip: text;
 	font-size:25px;
 }
 h4
@@ -160,10 +163,31 @@ margin-right:20px;
 @media all and (max-width: 768px) /*mise en place du responsive*/
 {
 h4:before{
-	content:none;
+			content:"";
+display:block;
+height:10px;
+width:80px;
+	background-image:url(../img/papille_gauche.jpg);
+	background-repeat:no-repeat;
+	background-attachment:scroll;
+	position:relative;
+	left:0px;
+	top:10px;
+	margin:0;
 }
 h4:after{
-	content:none;
+		content:"";
+display:block;
+height:10px;
+width:80px;
+	background-image:url(../img/papille_droit.jpg);
+	background-repeat:no-repeat;
+		background-attachment:scroll;
+	position:relative;
+	right:0;
+	bottom:15px;
+	left:70%;
+	margin:0;
 }
 
 #zone_menu
