--- a/css/note.css
+++ b/css/note.css
@@ -175,29 +175,10 @@ h4{
 
 }
 h4:before{
-	content:"";
-display:block;
-height:10px;
-width:80px;
-	background-image:url(../img/note_gauche.jpg);
-	background-repeat:no-repeat;
-	position:relative;
-	left:0px;
-	top:10px;
-	margin:0;
+	content:none;
 }
 h4:after{
-	content:"";
-display:block;
-height:10px;
-width:80px;
-	background-image:url(../img/note_droit.jpg);
-	background-repeat:no-repeat;
-	position:relative;
-	right:0;
-	bottom:15px;
-	left:70%;
-	margin:0;
+	content:none;
 }
 
 
