--- a/css/palette.css
+++ b/css/palette.css
@@ -65,7 +65,7 @@ h4 > a:before {
   height: 3px;
   bottom: 0;
   left: 0;
-  background: orange;
+  background: green;
   visibility: hidden;
   border-radius: 5px;
   transform: scaleX(0);
@@ -164,29 +164,10 @@ margin-right:20px;
 @media all and (max-width: 768px) /*mise en place du responsive*/
 {
 h4:before{
-		content:"";
-display:block;
-height:10px;
-width:80px;
-	background-image:url(../img/palette_gauche.jpg);
-	background-repeat:no-repeat;
-	position:relative;
-	left:0px;
-	top:10px;
-	margin:0;
+		content:none;
 }
 h4:after{
-	content:"";
-display:block;
-height:10px;
-width:80px;
-	background-image:url(../img/palette_droit.jpg);
-	background-repeat:no-repeat;
-	position:relative;
-	right:0;
-	bottom:15px;
-	left:70%;
-	margin:0;
+	content:none;
 }
 
 #zone_menu
