--- a/css/papille.css
+++ b/css/papille.css
@@ -163,29 +163,10 @@ margin-right:20px;
 @media all and (max-width: 768px) /*mise en place du responsive*/
 {
 h4:before{
-			content:"";
-display:block;
-height:10px;
-width:80px;
-	background-image:url(../img/papille_gauche.jpg);
-	background-repeat:no-repeat;
-	position:relative;
-	left:0px;
-	top:10px;
-	margin:0;
+			content:none;
 }
 h4:after{
-		content:"";
-display:block;
-height:10px;
-width:80px;
-	background-image:url(../img/papille_droit.jpg);
-	background-repeat:no-repeat;
-	position:relative;
-	right:0;
-	bottom:15px;
-	left:70%;
-	margin:0;
+		content:none;
 }
 
 #zone_menu
