correction de l'animation prochainement

--- a/css/chic.css
+++ b/css/chic.css
@@ -96,7 +96,7 @@ h4 > a:focus:before {
 h4::before
 {
 font-family:'Font Awesome 5 Pro';
-content:url(../img/chic_gauche.jpg);
+content:url(../img/chic-gauche.png);
 margin-right:5%;
 font-weight:bold;
 }
@@ -104,7 +104,7 @@ font-weight:bold;
 h4::after
 {
 	font-family:'Font Awesome 5 Pro';
-	content:url(../img/chic_droit.jpg);
+	content:url(../img/chic-droit.png);
 	margin-left:5%;
 	font-weight:bold;
 }
