--- a/css/papille.css
+++ b/css/papille.css
@@ -31,10 +31,12 @@ h4
 {
 font-family:'Comic Sans MS';
 font-style:bold;
+width:100%;
 margin:0;
 margin-top:20px;
 padding:0;
 border:0 none;
+text-align:center;
 position: relative;
  outline: none;
 }
@@ -77,16 +79,14 @@ h4 > a:focus:before {
 
 h4::before
 {
-font-family:'Font Awesome 5 Pro';
-content:url(../img/papille_gauche.jpg);
+content:url(../img/papille-gauche.png);
 margin-right:5%;
 font-weight:bold;
 }
 
 h4::after
 {
-	font-family:'Font Awesome 5 Pro';
-	content:url(../img/papille_droit.jpg);
+	content:url(../img/papille-droit.png);
 	margin-left:5%;
 	font-weight:bold;
 }
