--- a/css/index.css
+++ b/css/index.css
@@ -202,14 +202,14 @@ opacity:0.8;
 #bouton_proch
 {
 	height:10%;
-	width:20%;
+	width:15%;
 	background-color:#43a047;
 	text-align:center;
 	/*margin-left:45%;
 	margin-bottom:5%;*/
 	margin:auto;
 	margin-bottom:10px;
-	padding-right:0px;
+	padding-right:0;
 	padding-top:2px;
 	padding-bottom:2px;
 	border-radius:5%;
