--- a/css/index.css
+++ b/css/index.css
@@ -198,7 +198,7 @@ opacity:0.8;
 #bouton_proch
 {
 	height:10%;
-	width:15%;
+	width:16%;
 	background-color:#43a047;
 	text-align:center;
 	/*margin-left:45%;
@@ -217,6 +217,7 @@ opacity:0.8;
 #b_proch
 {
 	width:80%;
+	margin-left:5px;
 	color:#FFC107;
 	margin:0;
 }
