--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,7 @@ padding-bottom:5px;
 {
 font-family:'Font Awesome 5 Pro';
 		font-weight: 900;
+		margin-left:5px;
 }
 
 footer
@@ -43,6 +44,7 @@ footer
 	background-color:#599b87;
 	width:100%;
 	display:flex;
+	z-index:2;
 	flex-direction:row;
 	justify-content:space-between;
 	bottom:0;
