--- a/css/chic.css
+++ b/css/chic.css
@@ -24,12 +24,11 @@ h3
 	background-image: linear-gradient(to right, #B8741B 0%, #8786FF 100%);
   color: transparent;
   -webkit-background-clip: text;
-  background-clip: text;
 }
 h4
 {
 font-family:'Comic Sans MS';
-font-style:bold;
+font-weight:bold;
 margin:0;
 margin-top:30px;
 padding:0;
