--- a/css/index.css
+++ b/css/index.css
@@ -109,7 +109,7 @@ a:hover
 	margin-bottom:30px;
 	text-align:center;
 }
-#m_note
+#b_note h2
 {
 	margin-top:0;
 }
@@ -132,12 +132,12 @@ a:hover
 	margin-left:30px;
 	margin-bottom:30px;
 }
-#t_chic{
+#b_chic a{
 	background-image: linear-gradient(to right, #B8741B 0%, #8786FF 100%);
   color: transparent;
   -webkit-background-clip: text;
 }
-#m_chic{
+#b_chic h3{
 	color:orange;
 }
 /*
@@ -158,7 +158,7 @@ opacity:0.8;
 	margin-right:30px;
 	margin-top:30px;
 }
-#t_papille{
+#b_papille a{
 	background-image: linear-gradient(to right, #2D18BB 0%, #33B5FF 100%);
   color: transparent;
   -webkit-background-clip: text;
@@ -181,7 +181,7 @@ opacity:0.8;
 	margin-left:30px;
 	margin-top:30px;
 }
-#t_palette{
+#b_palette a{
 	background-image: linear-gradient(to right, #0FB846 0%, #E8FDD5 100%);
   color: transparent;
   -webkit-background-clip: text;
@@ -215,7 +215,7 @@ opacity:0.8;
 	flex-direction:row;
 }
 
-#b_proch
+#bouton_proch a
 {
 	width:80%;
 	margin-left:5px;
