--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,14 @@ h1
 	padding-bottom:20px;
 }
 
-
+.fa-search
+{
+color:black;
+font-size:15px;
+padding:5px;
+border:1px solid grey;
+margin-left:10px;
+}
 #recherche
 {
 width:100%;
@@ -31,14 +38,14 @@ background-color:#e8eaf6;
 padding-top:5px;
 padding-bottom:5px;
 }
-
+/*
 #boutton_recherche
 {
 font-family:'Font Awesome 5 Pro';
 		font-weight: 900;
 		margin-left:5px;
 }
-
+*/
 footer
 {
 	/*background-color:#43a047;*/
