--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ header
 h1
 {
 	color:#FFC107;
-	/*background-color:#43a047;*/
+	/*background-color:#43a047; l*/
     background-color:#599b87;
 	height:100%;
 	width:100%;
