--- a/css/note.css
+++ b/css/note.css
@@ -26,7 +26,6 @@ i
 	background-image: linear-gradient(to right, red 0%, orange 100%);
   color: transparent;
   -webkit-background-clip: text;
-  background-clip: text;
 	/*background:linear-gradient(to right, red, orange);*/
 }
 
@@ -47,10 +46,11 @@ h3
 /*
 * {margin:0;padding:0;border:0 none;position: relative; outline: none;*/
 }
+
 h4
 {
 font-family:'Comic Sans MS';
-font-style:bold;
+font-weight:bold;
 margin:0;
 margin-top:20px;
 padding:0;
@@ -122,7 +122,6 @@ h5::before
 		background-image: linear-gradient(to right, red 0%, orange 100%);
   color: transparent;
   -webkit-background-clip: text;
-  background-clip: text;
 }
 
 #zone_menu
