--- a/css/palette.css
+++ b/css/palette.css
@@ -28,12 +28,11 @@ h3
 	background-image: linear-gradient(to right, #0FB846 0%, #E8FDD5 100%);
   color: transparent;
   -webkit-background-clip: text;
-  background-clip: text;
 }
 h4
 {
 font-family:'Comic Sans MS';
-font-style:bold;
+font-weight:bold;
 margin:0;
 margin-top:30px;
 padding:0;
