--- a/css/papille.css
+++ b/css/papille.css
@@ -24,13 +24,12 @@ h3
 	background-image: linear-gradient(to right, #2D18BB 0%, #33B5FF 100%);
   color: transparent;
   -webkit-background-clip: text;
-  background-clip: text;
 	font-size:25px;
 }
 h4
 {
 font-family:'Comic Sans MS';
-font-style:bold;
+font-weight:bold;
 width:100%;
 margin:0;
 margin-top:20px;
